# sendIoTHubSenser

./: #main.c#  #sendIoTHubSenser.h#  .#main.c  .gitignore  CMakeLists.txt  CMakeLists.txt.bak2  README.md  main.c  network.c  network.h  remote_monitoring.c  remote_monitoring.h  rgbLed.c  rgbLed.h  sendIoTHub  sendIoTHubSenser.h  sendIoTHubSenser.service  testSendIoTHub.service
cmake/: sample_app  sendIoTHub  sendIoTHubd
daemonize/: CMakeLists.txt  daemonize.h
parson/: CMakeLists.txt
